--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <div class="container">
-        <h1>Research Paper Finder</h1>
+        <h1>Find Research papers from ArXiv</h1>
+        <h2>Just type your topic!</h2>
 
         <!-- Search form -->
         <form method="POST">
